fix(avo-2140): render assignment labels and class correctly on mobile

--- a/src/assignment/views/AssignmentOverview.scss
+++ b/src/assignment/views/AssignmentOverview.scss
@@ -79,7 +79,7 @@
 		width: 100%;
 
 		&__label {
-			width: 160px;
+			width: 100px;
 			max-width: 100%;
 			overflow: hidden;
 			text-overflow: ellipsis;
@@ -87,15 +87,7 @@
 		}
 
 		&__value {
-			flex-grow: 1;
-		}
-
-		&--labels {
-			grid-row: 3;
-
-			@media screen and (min-width: ($g-bp2)) {
-				display: none;
-			}
+			width: calc(100% - 100px);
 		}
 	}
 }
